[package]
name = "blog-collection-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.16"
serde = "1.0.145"
serde_json = "1.0.86"
tokio = {version = "1.21.2", features = ["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
